Add @Serial, and use Path.of() and a text block
Applied by OpenRewrite: AddSerialAnnotationToSerialVersionUID,
PathsGetToPathOf, and UseTextBlocks (multi-line strings only).